# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
client-web-react/: Dockerfile
contributing/: configuration.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/: HEARTBEAT.md
nanobot/workspace/cron/: jobs.json
nanobot/workspace/memory/: HISTORY.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
