[project]
name = "nanobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "mcp-lms",
    "mcp-obs",
    "nanobot-ai>=0.1.4.post6",
]

[tool.uv.sources]
mcp-lms = { workspace = true, editable = true }
mcp-obs = { workspace = true, editable = true }
