[project]
name = "mcp-obs"
version = "1.0.0"
description = "MCP server exposing VictoriaLogs and VictoriaTraces as tools"
requires-python = "==3.14.*"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
